[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydf_invoice"
version = "0.1-beta"
authors = [
    { name="Wassim CHAGUETMI", email="wassim.chaguetmi@gmail.com" },
]
description = "pydf_invoice is a utility class to help developers create PDF invoices using Python easily."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Simouche/pydf_invoice"
"Bug Tracker" = "https://github.com/Simouche/pydf_invoice/issues"
